@@ -1,8 +1,5 @@
 package seedu.address.testutil;
 
-
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.model.RecipeBook;
@@ -23,7 +20,7 @@ public class TypicalRecipes {
     public static final Recipe FRIED_RICE = new RecipeBuilder().withName("Fried Rice")
             .withCompletionTime(30).withIngredients("Carrots 3.0", "Eggs 1.0", "White Rice 4.0 Cups")
             .withServingSize(1).withSteps("Place carrots in saucepan and cover with water", "Heat wok")
-            .withTags("Chinese", "Asians").build();
+            .withTags("Chinese", "Asian").build();
 
     public static final Recipe DUCK_RICE = new RecipeBuilder().withName("Duck Rice")
             .withCompletionTime(30).withIngredients("Duck meat 1.0 pound", "Rice 4.0 Cups", "Eggs 1.0")
@@ -72,9 +69,6 @@ public class TypicalRecipes {
             .withServingSize(1).withSteps("Heat up your tortillas",
                     "Assemble the avocado and lettuce atop of tortilla").withTags("Mexican", "Vegan").build();
 
-    // Manually added - Person's details found in {@code CommandTestUtil}
-    // Recipes created in the CommandTestUtil Files
-    //public static final String KEYWORD_MATCHING_MEIER = "Meier";  //A keyword that matches MEIER
 
     private TypicalRecipes() {
     } //prevents instantiation
@@ -91,7 +85,6 @@ public class TypicalRecipes {
     }
 
     public static List<Recipe> getTypicalRecipes() {
-        return new ArrayList<>(Arrays.asList(AGLIO_OLIO, FRIED_RICE, DUCK_RICE, SUSHI, BEEF_TACO, SHOYU_RAMEN,
-                FISH_CHIPS, BOLOGNESE));
+        return List.of(AGLIO_OLIO, FRIED_RICE, DUCK_RICE, SUSHI, BEEF_TACO, SHOYU_RAMEN, FISH_CHIPS, BOLOGNESE);
     }
 }
